--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -36,7 +36,7 @@
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
   .title:hover {
     text-shadow: 0 -1rem 0 var(--color-brand-teal),
       0 1rem 0 var(--color-brand-red);
