--- a/styles/globals.css
+++ b/styles/globals.css
@@ -86,6 +86,7 @@ body {
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  background-color: var(--color-brand-green);
 }
 /*
   6. Improve media defaults
